--- a/NormDiplom.csproj
+++ b/NormDiplom.csproj
@@ -94,6 +94,12 @@
     <Compile Include="Models\Publisher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReaderListForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReaderListForm.Designer.cs">
+      <DependentUpon>ReaderListForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AuthForm.resx">
       <DependentUpon>AuthForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -112,6 +118,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ReaderListForm.resx">
+      <DependentUpon>ReaderListForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="ArchiveDataSet.xsc">
       <DependentUpon>ArchiveDataSet.xsd</DependentUpon>
     </None>
@@ -124,6 +133,7 @@
       <DependentUpon>ArchiveDataSet.xsd</DependentUpon>
     </None>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\NormDiplom.Models.Employee.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
