Изменены некоторые файлы, отредактировано подключение к MS SQL добавлены функции к кнопкам

--- a/App.config
+++ b/App.config
@@ -14,10 +14,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ModelEF" connectionString="data source=.\sqlexpress;initial catalog=Archive;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework"
-      providerName="System.Data.SqlClient" />
-    <add name="NormDiplom.Properties.Settings.ArchiveConnectionString"
-      connectionString="Data Source=.\sqlexpress;Initial Catalog=Archive;Integrated Security=True;TrustServerCertificate=True"
-      providerName="System.Data.SqlClient" />
+    <add name="ModelEF" connectionString="data source=.\sqlexpress;initial catalog=Archive;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="NormDiplom.Properties.Settings.ArchiveConnectionString" connectionString="Data Source=.\sqlexpress;Initial Catalog=Archive;Integrated Security=True;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+    <add name="ArchiveEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=Archive;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ArchiveEntitie" connectionString="metadata=res://*/Models.Model1ка.csdl|res://*/Models.Model1ка.ssdl|res://*/Models.Model1ка.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=Archive;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
